force-app/main/default/objects/SVMXA360__ApplicationSetting__c/SVMXA360__ApplicationSetting__c.object-meta.xml
<CustomObject>
    <description>To store config settings related to Application Setting</description>
    <label>Application Setting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>