force-app/main/default/objects/SVMXA360__ApplicationSetting__c/fields/SVMXA360__ApplicationModule__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplicationModule__c</fullName>
    <description>Name of the module for which setting is defined</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Module</label>
    <length>100</length>
    <type>Text</type>
</CustomField>