force-app/main/default/objects/SVMXA360__ApplicationSetting__c/fields/SVMXA360__ApplicationSubmodule__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplicationSubmodule__c</fullName>
    <description>Name of the sub module for which setting is defined</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Submodule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>