force-app/main/default/objects/SVMXA360__ApplicationSetting__c/fields/SVMXA360__SettingDataType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SettingDataType__c</fullName>
    <description>Data type of the setting value used for type casting string value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Setting Data Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>