force-app/main/default/objects/SVMXA360__ApplicationSetting__c/fields/SVMXA360__SettingValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SettingValue__c</fullName>
    <description>To store the value of the setting defined</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Setting Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>